# hagen

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: aca1300-200.yaml  pylon_camera.yaml
data/analyze/: precision.py  speed_test.py
data/params/: velodyne16_lidar_extrinsics.yaml
data/trajectories/: square.csv  square_low_level.csv  straight_line_v1.csv  straight_line_v2.csv
launch/: hagen_node.launch  pylon_camera_node_aca1300_200.launch  record_drone.launch  trajectory_estimator_node.launch
nodes/: ground_removal_filter_node.cc  hagen_node.cc  trajectory_estimator_node.cc  trajectory_node.cc
src/: CMakeLists.txt  time_diff.txt
src/ground_removal/: CMakeLists.txt  depth_ground_remover.cpp  depth_ground_remover.h  local_maxima_filter.cpp  local_maxima_filter.h  quadtree.cc  quadtree.h  ssa.cc  ssa.h  union_find.cpp  union_find.h
src/include/: colours.h  ground_removal_filter_node.h  pcl_types.h  trajectory_estimator_node.h
src/lidar_subnode/: CMakeLists.txt  hagen.cc  hagen.h  lidar_process_subnode.cc  lidar_process_subnode.h
src/projections/: CMakeLists.txt  cloud_projection.cpp  cloud_projection.h  projection_params.cpp  projection_params.h  spherical_projection.cpp  spherical_projection.h
src/utils/: CMakeLists.txt  cloud.cpp  cloud.h  common_utils.cpp  common_utils.h  radians.h
