<?xml version="1.0"?>
<package format="2">
    <name>ground_removal_filter</name>
    <version>0.0.0</version>
    <description>Ground and Non-ground seperation filter</description>
    <maintainer email="ggeesara@gmail.com">Geesara Prathap</maintainer>
    <license>ASL 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <depend>roslib</depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>tf_conversions</depend>
    <depend>eigen_conversions</depend>
    <depend>tf</depend>
    <depend>roslint</depend>
    <depend>roslaunch</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>message_filters</depend>
    <depend>visualization_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>std_srvs</depend>
    <depend>pcl_ros</depend>
    <depend>rviz_visual_tools</depend>
</package>

